--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="https://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.w3.org/1999/xhtml"
+      th:replace="~{fragments/layout::layout(~{::.container})}">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 <body>
-
-</body>
+<div class="container">
+    <center>
+        <b>WebSerwis "Pakiety" jest webowym (przeglądarkowym) rozszerzeniem aplikacji "Help-Desk"</b>
+        <br>
+        Aplikacja przeznaczona jest dla dyżurnych jednostek poziomu KWP/KMP/KPP w celu dokonania sprawdzenia
+        dostępności pakietów typu :<br>
+        seksualne,<br>
+        DNA,<br>
+        krew,<br>
+        narkotyki<br>
+        w poszczególnych jednostkach garnizonu śląskiego.<br>
+        Nadto daje możliwość wydania (za potwierdzeniem) danego typu pakietu.
+        <hr>
+        Wybierz interesującą Cię opcję z górnego menu.
+    </center>
+</div>
+</body><
 </html>
